--- a/assets/scss/modules/_intro.scss
+++ b/assets/scss/modules/_intro.scss
@@ -51,6 +51,7 @@
   
     h1 {
       position: relative;
+      font-family: $header-font;
       font-size: 68px;
       font-weight: 900;
       line-height: 1;
