--- a/assets/scss/base/_body-element.scss
+++ b/assets/scss/base/_body-element.scss
@@ -2,9 +2,11 @@ body{
   background-color: $black;
   font-size: 14px;
   line-height: 1.6;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Open Sans', sans-serif;
   color: $white;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
 }
+
+$header-font: 'Poppins', sans-serif;
 
