--- a/assets/scss/base/_vars.scss
+++ b/assets/scss/base/_vars.scss
@@ -3,3 +3,6 @@ $white: #27304F;
 $black: #FFF;
 $highlight: #F37075;
 $muted-gray: #B8DAE9;
+
+$header-font: 'Poppins', sans-serif;
+$transition: .3s;
