--- a/assets/scss/modules/_contact.scss
+++ b/assets/scss/modules/_contact.scss
@@ -1,3 +1,8 @@
+.section-inside {
+  position: relative;
+  top: 100px;
+}
+
 .ux-ui-design{
     position: relative;
     display: flex;
@@ -16,17 +21,89 @@
   .each-work {
     display: flex;
     flex-direction: column;
-    width: 200px;
+    width: 100%;
     margin: 10px;
     height: 200px;
+    color: $black;
+    position: relative;
+    transition: $transition;
+
+    h4{
+      position: absolute;
+      width: 100px;
+      z-index: 5;
+      bottom: 0;
+      left: 10px;
+      transition: $transition;
+      opacity:1;
+    }
 
     img{
       object-fit: cover;
       height: 200px;
       position: absolute;
-      width: 200px;
+      width: 100%;
       z-index: -1;
     }
+
+    a{
+      display: flex;
+      width: 100%;
+      height: 100%;
+      justify-content: center;
+      align-items: center;
+      color: white;
+      background-color: $highlight;
+      text-decoration: none;
+      opacity: 0;
+      line-height: 0px;
+    }
+
+    &:before{
+      content: "";
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: 100px;
+      display: block;
+      background-color: black;
+      opacity: .5;
+      z-index: 1;
+      transition: $transition;
+      font-weight: 700;
+    }
+
+    &:hover{
+      transition: $transition;
+
+      h4{
+        opacity: 0;
+        transition: $transition;
+      }
+      a{
+        opacity: .9;
+        transition: $transition;
+
+        &:after{
+          content:'\f06e';
+          font-family: FontAwesome;
+          font-size: 25px;
+          display: -webkit-box;
+          display: -ms-flexbox;
+          display: flex;
+          width: 100%;
+          position: absolute;
+          top: 35%;
+          justify-content: center;
+        }
+      }
+      &:before{
+        height: 0px;
+        transition: $transition;
+      }
+      
+    }
+    
 }
 }
 }
