--- a/css/main.css
+++ b/css/main.css
@@ -221,7 +221,7 @@ body {
   background-color: #FFF;
   font-size: 14px;
   line-height: 1.6;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Open Sans', sans-serif;
   color: #27304F;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%; }
@@ -508,7 +508,7 @@ body {
   margin: 0;
   padding: 0;
   list-style-position: inside;
-  z-index: 10; }
+  z-index: 0; }
   .side-nav > li {
     position: relative;
     top: -5px;
@@ -599,6 +599,7 @@ body {
     background-color: #F37075; }
   .intro--banner h1 {
     position: relative;
+    font-family: "Poppins", sans-serif;
     font-size: 68px;
     font-weight: 900;
     line-height: 1;
@@ -857,9 +858,6 @@ body {
 
 .about {
   position: relative;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
   display: flex;
   width: 900px;
   max-width: 75%;
@@ -1029,6 +1027,10 @@ body {
   .about--options {
     display: none; } }
 
+.section-inside {
+  position: relative;
+  top: 100px; }
+
 .ux-ui-design {
   position: relative;
   display: flex;
@@ -1044,15 +1046,71 @@ body {
     .ux-ui-design .work-container .each-work {
       display: flex;
       flex-direction: column;
-      width: 200px;
+      width: 100%;
       margin: 10px;
-      height: 200px; }
+      height: 200px;
+      color: #FFF;
+      position: relative;
+      transition: 0.3s; }
+      .ux-ui-design .work-container .each-work h4 {
+        position: absolute;
+        width: 100px;
+        z-index: 5;
+        bottom: 0;
+        left: 10px;
+        transition: 0.3s;
+        opacity: 1; }
       .ux-ui-design .work-container .each-work img {
         object-fit: cover;
         height: 200px;
         position: absolute;
-        width: 200px;
+        width: 100%;
         z-index: -1; }
+      .ux-ui-design .work-container .each-work a {
+        display: flex;
+        width: 100%;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        background-color: #F37075;
+        text-decoration: none;
+        opacity: 0;
+        line-height: 0px; }
+      .ux-ui-design .work-container .each-work:before {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: 100px;
+        display: block;
+        background-color: black;
+        opacity: .5;
+        z-index: 1;
+        transition: 0.3s;
+        font-weight: 700; }
+      .ux-ui-design .work-container .each-work:hover {
+        transition: 0.3s; }
+        .ux-ui-design .work-container .each-work:hover h4 {
+          opacity: 0;
+          transition: 0.3s; }
+        .ux-ui-design .work-container .each-work:hover a {
+          opacity: .9;
+          transition: 0.3s; }
+          .ux-ui-design .work-container .each-work:hover a:after {
+            content: '\f06e';
+            font-family: FontAwesome;
+            font-size: 25px;
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: flex;
+            width: 100%;
+            position: absolute;
+            top: 35%;
+            justify-content: center; }
+        .ux-ui-design .work-container .each-work:hover:before {
+          height: 0px;
+          transition: 0.3s; }
 
 @media (max-width: 1180px) {
   .contact--lockup {
