--- a/css/main.css
+++ b/css/main.css
@@ -508,7 +508,7 @@ body {
   margin: 0;
   padding: 0;
   list-style-position: inside;
-  z-index: 0; }
+  z-index: 10; }
   .side-nav > li {
     position: relative;
     top: -5px;
@@ -707,154 +707,58 @@ body {
   .intro--options {
     display: none; } }
 
-.work {
+.section-inside.ux {
+  background-color: #B8DAE9; }
+  .section-inside.ux .ux-ui-design {
+    top: 60px; }
+    .section-inside.ux .ux-ui-design .work-container .each-work img {
+      z-index: 0; }
+  .section-inside.ux hr {
+    margin-top: 120px;
+    width: 80%; }
+
+.side-bar-sec {
+  width: 400px;
+  position: absolute;
+  background-color: white;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 3px;
+  right: 100px;
+  bottom: -150px; }
+
+.work-header {
+  width: 100%;
+  height: 60vh;
   position: relative;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
   display: flex;
-  width: 960px;
-  max-width: 80%;
-  height: 100%;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  margin: 0 auto; }
-  .work h2 {
-    margin: 0 0 20px 0;
-    font-size: 30px;
-    text-align: center; }
-
-@media (max-width: 1180px) {
-  .work {
-    max-width: 100%; } }
-
-.work--lockup {
-  position: relative; }
-  .work--lockup .slider {
-    position: relative;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
+  align-items: center;
+  justify-content: center; }
+  .work-header h1 {
     display: flex;
-    width: 80%;
-    margin: 0 auto;
-    padding: 0;
-    list-style: none; }
-  .work--lockup .slider--item {
+    font-family: "Poppins", sans-serif;
+    font-size: 72px;
+    line-height: 82px;
     position: absolute;
-    display: none;
-    text-align: center; }
-    .work--lockup .slider--item a {
-      text-decoration: none;
-      color: #858585; }
-  .work--lockup .slider--item-title {
-    margin-top: 10px;
-    font-size: 12px;
-    font-weight: 700;
-    text-transform: uppercase; }
-  .work--lockup .slider--item-description {
-    display: none;
-    max-width: 250px;
-    margin: 0 auto; }
-  .work--lockup .slider--item-image {
-    width: 150px;
-    height: 150px;
-    margin: 0 auto;
-    border-radius: 50%;
-    overflow: hidden; }
-    .work--lockup .slider--item-image img {
-      width: 100%; }
-  .work--lockup .slider--item-left {
-    top: 50%;
-    left: 0;
-    -webkit-transform: translateY(-50%);
-    transform: translateY(-50%);
-    display: block; }
-  .work--lockup .slider--item-right {
-    top: 50%;
-    right: 0;
-    -webkit-transform: translateY(-50%);
-    transform: translateY(-50%);
-    display: block; }
-  .work--lockup .slider--item-center {
-    position: relative;
-    top: 30px;
-    left: 50%;
-    -webkit-transform: translateX(-50%);
-    transform: translateX(-50%);
-    display: block; }
-    .work--lockup .slider--item-center a {
-      color: #27304F; }
-    .work--lockup .slider--item-center .slider--item-title {
-      margin-top: 25px;
-      font-size: 16px; }
-    .work--lockup .slider--item-center .slider--item-description {
-      display: block; }
-    .work--lockup .slider--item-center .slider--item-image {
-      width: 300px;
-      height: 300px; }
-  .work--lockup .slider--next, .work--lockup .slider--prev {
-    position: absolute;
-    top: 160px;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
+    color: #FFF;
+    z-index: 10; }
+  .work-header .img-container {
+    max-width: 80%;
+    width: 100%;
     display: flex;
-    width: 50px;
-    height: 50px;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-    -ms-flex-pack: center;
     justify-content: center;
-    background-color: #B8DAE9;
-    border-radius: 50%;
-    cursor: pointer; }
-  .work--lockup .slider--next svg, .work--lockup .slider--prev svg {
-    width: 20px;
-    fill: #27304F; }
-  .work--lockup .slider--next {
-    right: 0; }
-  .work--lockup .slider--prev {
-    left: 0; }
-
-@media (max-width: 900px) {
-  .work--lockup .slider--item-image {
-    width: 120px;
-    height: 120px; }
-  .work--lockup .slider--item-center .slider--item-image {
-    width: 240px;
-    height: 240px; }
-  .work--lockup .slider--next, .work--lockup .slider--prev {
-    top: 130px; } }
-
-@media (max-width: 767px) {
-  .work--lockup .slider {
-    width: 75%; }
-  .work--lockup .slider--item-image {
-    width: 90px;
-    height: 90px; }
-  .work--lockup .slider--item-center .slider--item-image {
-    width: 190px;
-    height: 190px; }
-  .work--lockup .slider--next, .work--lockup .slider--prev {
-    top: 105px; } }
-
-@media (max-width: 600px) {
-  .work--lockup .slider {
-    width: auto; }
-  .work--lockup .slider--item-left, .work--lockup .slider--item-right {
-    display: none; } }
+    height: 80%; }
+    .work-header .img-container img {
+      width: 100%;
+      height: 60vh;
+      object-fit: cover; }
+    .work-header .img-container:before {
+      content: "";
+      display: block;
+      position: absolute;
+      max-width: 80%;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5); }
 
 .about {
   position: relative;
@@ -1029,7 +933,9 @@ body {
 
 .section-inside {
   position: relative;
-  top: 100px; }
+  top: 100px;
+  width: 100%;
+  height: 100%; }
 
 .ux-ui-design {
   position: relative;
@@ -1076,7 +982,9 @@ body {
         background-color: #F37075;
         text-decoration: none;
         opacity: 0;
-        line-height: 0px; }
+        line-height: 0px;
+        transition: 0.3s;
+        z-index: 10; }
       .ux-ui-design .work-container .each-work:before {
         content: "";
         position: absolute;
@@ -1107,7 +1015,8 @@ body {
             width: 100%;
             position: absolute;
             top: 35%;
-            justify-content: center; }
+            justify-content: center;
+            transition: 0.3s; }
         .ux-ui-design .work-container .each-work:hover:before {
           height: 0px;
           transition: 0.3s; }
