--- a/assets/scss/modules/_contact.scss
+++ b/assets/scss/modules/_contact.scss
@@ -1,6 +1,8 @@
 .section-inside {
   position: relative;
   top: 100px;
+  width: 100%;
+  height: 100%;
 }
 
 .ux-ui-design{
@@ -57,6 +59,8 @@
       text-decoration: none;
       opacity: 0;
       line-height: 0px;
+      transition: $transition;
+      z-index: 10;
     }
 
     &:before{
@@ -95,6 +99,7 @@
           position: absolute;
           top: 35%;
           justify-content: center;
+          transition: $transition;
         }
       }
       &:before{
