--- a/assets/scss/modules/_work.scss
+++ b/assets/scss/modules/_work.scss
@@ -1,214 +1,74 @@
-  .work {
-    position: relative;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
+.section-inside.ux{
+  background-color: $muted-gray;
+  .ux-ui-design{
+    top: 60px;
+    .work-container .each-work img{
+      z-index: 0;
+    }
+  }
+
+  hr {
+    margin-top: 120px;
+    width: 80%;
+}
+
+}
+
+.side-bar-sec {
+  width: 400px;
+  position: absolute;
+  background-color: white;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 3px;
+  right: 100px;
+  bottom: -150px;
+}
+
+.work-header {
+  width: 100%;
+  height: 60vh;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  h1{
     display: flex;
-    width: 960px;
+    font-family: $header-font;
+    font-size: 72px;
+    line-height: 82px;
+    position: absolute;
+    color: $black;
+    z-index: 10;
+  }
+
+  .img-container{
     max-width: 80%;
-    height: 100%;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-    -ms-flex-pack: center;
+    width: 100%;
+    display: flex;
     justify-content: center;
-    margin: 0 auto;
-  
-    h2 {
-      margin: 0 0 20px 0;
-      font-size: 30px;
-      text-align: center;
+    height: 80%;
+
+    img {
+      width: 100%;
+      height: 60vh;
+      object-fit: cover;
     }
-  }
-  
-  @media (max-width: 1180px) {
-    .work {
-      max-width: 100%;
-    }
-  }
-  
-  .work--lockup {
-    position: relative;
-  
-    .slider {
-      position: relative;
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -ms-flexbox;
-      display: flex;
-      width: 80%;
-      margin: 0 auto;
-      padding: 0;
-      list-style: none;
-    }
-  
-    .slider--item {
+
+    &:before{
+      content: "";
+      display: block;
       position: absolute;
-      display: none;
-      text-align: center;
-  
-      a {
-        text-decoration: none;
-        color: #858585;
-      }
+      max-width: 80%;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0,0,0,0.5);
     }
-  
-    .slider--item-title {
-      margin-top: 10px;
-      font-size: 12px;
-      font-weight: 700;
-      text-transform: uppercase;
-    }
-  
-    .slider--item-description {
-      display: none;
-      max-width: 250px;
-      margin: 0 auto;
-    }
-  
-    .slider--item-image {
-      width: 150px;
-      height: 150px;
-      margin: 0 auto;
-      border-radius: 50%;
-      overflow: hidden;
-  
-      img {
-        width: 100%;
-      }
-    }
-  
-    .slider--item-left {
-      top: 50%;
-      left: 0;
-      -webkit-transform: translateY(-50%);
-      transform: translateY(-50%);
-      display: block;
-    }
-  
-    .slider--item-right {
-      top: 50%;
-      right: 0;
-      -webkit-transform: translateY(-50%);
-      transform: translateY(-50%);
-      display: block;
-    }
-  
-    .slider--item-center {
-      position: relative;
-      top: 30px;
-      left: 50%;
-      -webkit-transform: translateX(-50%);
-      transform: translateX(-50%);
-      display: block;
-  
-      a {
-        color: $white;
-      }
-  
-      .slider--item-title {
-        margin-top: 25px;
-        font-size: 16px;
-      }
-  
-      .slider--item-description {
-        display: block;
-      }
-  
-      .slider--item-image {
-        width: 300px;
-        height: 300px;
-      }
-    }
-  
-    .slider--next, .slider--prev {
-      position: absolute;
-      top: 160px;
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -ms-flexbox;
-      display: flex;
-      width: 50px;
-      height: 50px;
-      -webkit-box-align: center;
-      -webkit-align-items: center;
-      -ms-flex-align: center;
-      align-items: center;
-      -webkit-box-pack: center;
-      -webkit-justify-content: center;
-      -ms-flex-pack: center;
-      justify-content: center;
-      background-color: $muted-gray;
-      border-radius: 50%;
-      cursor: pointer;
-    }
-  
-    .slider--next svg, .slider--prev svg {
-      width: 20px;
-      fill: $white;
-    }
-  
-    .slider--next {
-      right: 0;
-    }
-  
-    .slider--prev {
-      left: 0;
-    }
+
+
   }
-  
-  @media (max-width: 900px) {
-    .work--lockup {
-      .slider--item-image {
-        width: 120px;
-        height: 120px;
-      }
-  
-      .slider--item-center .slider--item-image {
-        width: 240px;
-        height: 240px;
-      }
-  
-      .slider--next, .slider--prev {
-        top: 130px;
-      }
-    }
-  }
-  
-  @media (max-width: 767px) {
-    .work--lockup {
-      .slider {
-        width: 75%;
-      }
-  
-      .slider--item-image {
-        width: 90px;
-        height: 90px;
-      }
-  
-      .slider--item-center .slider--item-image {
-        width: 190px;
-        height: 190px;
-      }
-  
-      .slider--next, .slider--prev {
-        top: 105px;
-      }
-    }
-  }
-  
-  @media (max-width: 600px) {
-    .work--lockup {
-      .slider {
-        width: auto;
-      }
-  
-      .slider--item-left, .slider--item-right {
-        display: none;
-      }
-    }
-  }
+
+
+}
+
+
