--- a/css/main.css
+++ b/css/main.css
@@ -771,6 +771,10 @@ body {
       height: 100%;
       background-color: rgba(0, 0, 0, 0.5); }
 
+img.logo-main {
+  width: 100%;
+  max-width: 200px; }
+
 .about {
   position: relative;
   display: flex;
@@ -815,13 +819,21 @@ body {
     width: 10px;
     height: 10px;
     background-color: #F37075; }
+  .about--banner p {
+    max-width: 800px;
+    width: 100%;
+    background-color: rgba(184, 218, 233, 0.5);
+    padding: 10px; }
   .about--banner h2 {
     position: relative;
     margin-top: 35px;
+    font-family: "Poppins", sans-serif;
     font-size: 68px;
     font-weight: 900;
     line-height: 1;
-    z-index: 1; }
+    z-index: 1;
+    max-width: 1000px;
+    width: 100%; }
     .about--banner h2::before {
       content: "";
       position: absolute;
@@ -857,8 +869,14 @@ body {
       transition: left .2s ease-in-out; }
   .about--banner img {
     position: absolute;
-    bottom: -90px;
-    right: -12px; }
+    bottom: 20px;
+    right: -5%;
+    width: 100%;
+    max-width: 450px;
+    z-index: -10;
+    transform: rotateY(540deg); }
+    .about--banner img.logo {
+      transform: rotateY(0deg); }
 
 .about--options {
   display: -webkit-box;
