--- a/assets/scss/modules/_section.scss
+++ b/assets/scss/modules/_section.scss
@@ -30,3 +30,22 @@
     transition: transform .4s ease-in-out;
     transition: transform .4s ease-in-out, -webkit-transform .4s ease-in-out;
   }
+
+  // .l-section.uxBg{
+  //   background-image: url('../../assets/img/work/uxui/cstore.png');
+  //   background-size: cover;
+  //   width: 100%;
+  //   height: 100%;
+  //   z-index: 0;
+
+  //   &:before{
+  //     content: "";
+  //     display: block;
+  //     width: 100%;
+  //     height: 100%;
+  //     position: absolute;
+  //     background-color: rgba(0,0,0,0.9);
+  //     z-index: -1;
+  //   }
+
+  // }
