--- a/assets/scss/modules/_about.scss
+++ b/assets/scss/modules/_about.scss
@@ -55,22 +55,23 @@ img.logo-main {
       background-color: $highlight;
     }
     p{
-      max-width: 800px;
+      max-width: 650px;
       width: 100%;
       background-color: rgba(184, 218, 233, 0.5);
       padding: 10px;
     }
   
     h2 {
-      position: relative;
-      margin-top: 35px;
-      font-family: $header-font;
-      font-size: 68px;
-      font-weight: 900;
-      line-height: 1;
-      z-index: 1;
-      max-width: 1000px;
-      width: 100%;
+    position: relative;
+    margin-top: 35px;
+    margin-bottom: -10px;
+    font-family: Poppins,sans-serif;
+    font-size: 60px;
+    font-weight: 700;
+    line-height: 1;
+    z-index: 1;
+    max-width: 780px;
+    width: 100%;
 
   
       &::before {
