--- a/assets/scss/modules/_header.scss
+++ b/assets/scss/modules/_header.scss
@@ -91,7 +91,7 @@
     padding: 0 20px;
     line-height: 30px;
     text-decoration: none;
-    color: $white;
+    color: $black;
     font-weight: 700;
     text-transform: uppercase;
     background-color: $highlight;
