--- a/assets/scss/modules/_side-nav.scss
+++ b/assets/scss/modules/_side-nav.scss
@@ -1,19 +1,10 @@
   .side-nav {
     position: relative;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
     display: flex;
     width: 230px;
     height: 70%;
     max-height: 750px;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
     flex-direction: column;
-    -webkit-justify-content: space-around;
-    -ms-flex-pack: distribute;
     justify-content: space-around;
     margin: 0;
     padding: 0;
@@ -27,7 +18,8 @@
       font-size: 6px;
       cursor: pointer;
       max-width: 120px;
-  
+      transition: opacity .4s ease-in-out;
+
       span {
         position: relative;
         top: 3px;
@@ -36,7 +28,7 @@
         font-size: 14px;
         font-weight: 300;
         opacity: 0;
-        visibility: hidden;
+        transition: opacity .4s ease-in-out;
       }
   
       &::before {
@@ -46,6 +38,26 @@
         color: #555;
         font-size: 14px;
         font-weight: 300;
+        transition: opacity .4s ease-in-out;
+        opacity: 1;
+      }
+
+      &:hover{
+        opacity: 1;
+        color: $highlight;
+        transition: opacity .4s ease-in-out;
+  
+        span {
+          opacity: 1;
+          visibility: visible;
+          transition: opacity .4s ease-in-out;
+        }
+  
+        &::before {
+          opacity: 0;
+          color: $white;
+          transition: opacity .4s ease-in-out;
+        }
       }
     }
   
