--- a/assets/scss/modules/_intro.scss
+++ b/assets/scss/modules/_intro.scss
@@ -66,6 +66,7 @@
       background-color: $highlight;
       color: white;
       border: none;
+      box-shadow: 1px 3px 5px 0px rgba(0,0,0,0.5);
   
       .btn-background {
         position: absolute;
