--- a/assets/scss/modules/_outer-nav.scss
+++ b/assets/scss/modules/_outer-nav.scss
@@ -89,7 +89,7 @@
       transform-style: preserve-3d;
       -webkit-transform: translateX(350px) translateZ(-1000px);
       transform: translateX(350px) translateZ(-1000px);
-      font-size: 55px;
+      font-size: 35px;
       font-weight: 900;
       opacity: 0;
       cursor: pointer;
@@ -111,12 +111,12 @@
       &::before {
         content: "";
         position: absolute;
-        top: 50%;
+        bottom: 0;
         left: 50%;
         -webkit-transform: translate(-50%, -25%);
         transform: translate(-50%, -25%);
-        width: 110%;
-        height: 15px;
+        width: 20%;
+        height: 5px;
         opacity: 0;
         background-color: $highlight;
       }
