--- a/assets/scss/modules/_work.scss
+++ b/assets/scss/modules/_work.scss
@@ -8,9 +8,11 @@
   img {
     object-fit: cover;
     width: 930px;
-    height: 150px;
+    height: 250px;
     border: 1px solid rgba(0,0,0,0.1);
+    z-index: -1;
   }
+
 
 }
 
@@ -68,6 +70,7 @@
     position: absolute;
     color: $black;
     z-index: 10;
+    text-align: center;
   }
 
   .img-container{
