--- a/css/main.css
+++ b/css/main.css
@@ -620,7 +620,8 @@ body {
     text-transform: uppercase;
     background-color: #F37075;
     color: white;
-    border: none; }
+    border: none;
+    box-shadow: 1px 3px 5px 0px rgba(0, 0, 0, 0.5); }
     .intro--banner button .btn-background {
       position: absolute;
       top: 0;
@@ -726,8 +727,9 @@ body {
   .preview-img img {
     object-fit: cover;
     width: 930px;
-    height: 150px;
-    border: 1px solid rgba(0, 0, 0, 0.1); }
+    height: 250px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    z-index: -1; }
 
 .section-inside.ux {
   background-color: #eee; }
@@ -773,7 +775,8 @@ body {
     line-height: 82px;
     position: absolute;
     color: #FFF;
-    z-index: 10; }
+    z-index: 10;
+    text-align: center; }
   .work-header .img-container {
     max-width: 80%;
     width: 100%;
@@ -1370,7 +1373,7 @@ img.logo-main {
   transform-style: preserve-3d;
   -webkit-transform: translateX(350px) translateZ(-1000px);
   transform: translateX(350px) translateZ(-1000px);
-  font-size: 55px;
+  font-size: 35px;
   font-weight: 900;
   opacity: 0;
   cursor: pointer;
@@ -1389,12 +1392,12 @@ img.logo-main {
   .outer-nav > li::before {
     content: "";
     position: absolute;
-    top: 50%;
+    bottom: 0;
     left: 50%;
     -webkit-transform: translate(-50%, -25%);
     transform: translate(-50%, -25%);
-    width: 110%;
-    height: 15px;
+    width: 20%;
+    height: 5px;
     opacity: 0;
     background-color: #F37075; }
   .outer-nav > li.is-active::before {
